--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang = "es">
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <head>
         <title>Sitio 1</title>
         <link href = "css/estilo.css" rel = "stylesheet">
@@ -21,7 +22,7 @@
             </a>
         </nav>
 
-        <p>Texto aaaaaaaaaaaaaaaaasa aaaaaaaaaaaaaaaa</p>
+        <p>Texto aaaaaaasdasdaaaaaaaaaaasa aaaaaaaaaaaaaaaa</p>
    
     </body>
 
